; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_distributed_planner.c_DeferErrorIfPartitionTableNotSingleReplicated.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_distributed_planner.c_DeferErrorIfPartitionTableNotSingleReplicated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [48 x i8] c"Run the query on the parent table \22%s\22 instead.\00", align 1
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [87 x i8] c"modifications on partitions when replication factor is greater than 1 is not supported\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @DeferErrorIfPartitionTableNotSingleReplicated to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @DeferErrorIfPartitionTableNotSingleReplicated(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i64 @PartitionTableNoLock(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %28

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @SingleReplicatedTable(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %28, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @PartitionParentOid(i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i8* @get_rel_name(i32 %17)
  store i8* %18, i8** %5, align 8
  %19 = call %struct.TYPE_4__* (...) @makeStringInfo()
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** %6, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @appendStringInfo(%struct.TYPE_4__* %20, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i8* %21)
  %23 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32* @DeferredError(i32 %23, i8* getelementptr inbounds ([87 x i8], [87 x i8]* @.str.1, i64 0, i64 0), i32* null, i32 %26)
  store i32* %27, i32** %2, align 8
  br label %29

28:                                               ; preds = %10, %1
  store i32* null, i32** %2, align 8
  br label %29

29:                                               ; preds = %28, %14
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local i64 @PartitionTableNoLock(i32) #1

declare dso_local i32 @SingleReplicatedTable(i32) #1

declare dso_local i32 @PartitionParentOid(i32) #1

declare dso_local i8* @get_rel_name(i32) #1

declare dso_local %struct.TYPE_4__* @makeStringInfo(...) #1

declare dso_local i32 @appendStringInfo(%struct.TYPE_4__*, i8*, i8*) #1

declare dso_local i32* @DeferredError(i32, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
